# OpenTypeless

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  open-typeless-project-plan.md
.claude/: settings.json
.claude/hooks/: enforce-openspec-cli.sh
clients/macos/: AGENTS.md  BUILD.md  CONTRIBUTING.md  Package.swift  README.md  RELEASING.md  justfile
clients/macos/OpenTypeless/: AppCoordinator.swift  AppLocalization.swift  AppTestMode.swift  Info.plist  OpenTypelessApp.swift
clients/macos/OpenTypeless.xcodeproj/: project.pbxproj
clients/macos/OpenTypelessTests/: AGENTS.md  AppContextAdapterRegistryTests.swift  AppCoordinatorContextFlowTests.swift  AppCoordinatorEnginePipelineTests.swift  AudioRecorderTests.swift  AutomaticDictionaryLearningServiceTests.swift  ContextEngineServiceTests.swift  DictionaryModelsTests.swift  DictionaryStoreTests.swift  EngineE2ETests.swift  EngineProcessManagerTests.swift  HistoryStoreTests.swift  HotkeyManagerTests.swift  LaunchAtLoginManagerTests.swift  MediaIngestionServiceTests.swift  MediaTranscriptionFeatureStateTests.swift  MentionFormatterTests.swift  MentionRewriteServiceTests.swift  (+15 more)
docs/: README_zh-CN.md  api-contract.md  macos-client-phase1.md
engine/: README.md  open-typeless.spec  pyproject.toml
engine/open_typeless/: __init__.py  cli.py  config.py  context.py  llm.py  models.py  prompt_router.py  server.py  stt.py
engine/open_typeless/prompts/: defaults.yaml
engine/tests/: test_config.py  test_context.py  test_llm.py  test_prompt_router.py  test_server.py  test_stt.py
scripts/: build-engine.sh
(+307 files in other folders)
