[project]
name = "open-typeless"
version = "0.1.0"
description = "Voice-to-text engine with scene-aware polishing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "python-multipart>=0.0.9",
]

[project.scripts]
open-typeless = "open_typeless.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
